# octopus

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  OctopusControlPanel_work_in_progress.md  README  README.md  build  compass.sh  configure  flash  index.html  led  octopus.config  octopus.files  octopus.includes  octopus.workspace  octopusdk.pl  params.json  reboot  todo.txt  update_qtcreator_project  usb.sh  wxSVG.project  wxWidgets.project
doc/: Documentation.project  Doxyfile  layout.xml  mainpage.h  protocol.md
gtest-1.6.0/: .cproject  .project
ldscripts/: ldscript_atmega328p.x
libadxl345/: CMakeLists.txt
libadxl345/include/octopus/: adxl345.h  adxl345_register.h
libadxl345/sample/: adxl345-sample.cpp
libadxl345/src/: adxl345.cpp  adxl345_register.cpp
libboost-linux/: .cproject  .project  Makefile
libboost-win32/: .cproject  .project  Makefile
libcomm/: CMakeLists.txt  libcomm.md
libhmc6352/: CMakeLists.txt
libhmc6352/include/octopus/: hmc6352.h
libhmc6352/sample/: hmc6352-sample.cpp
libhmc6352/src/: hmc6352.cpp
libimu3000/: CMakeLists.txt
liboctopus/: .cproject  .project  CMakeLists.txt
liboctopus/include/octopus/: acceleration_listener.h  analog_channel.h  analog_to_digital_converter.h  async_operation.h  avr_adc.h  avr_lock.h  avr_temperature.h  avr_timer.h  avr_timer0.h  avr_two_wire_interface.h  avr_usart.h  blink.h  buffer.h  compass_listener.h  compass_provider.h  fatal.h  gpio.h  host_lock.h  i2c.h  inertial_data_listener.h  inertial_data_provider.h  list.h  lock.h  looper.h  pool.h  power_management.h  power_manager.h  pwm_channel.h  range_listener.h  range_provider.h  servo.h  timer.h  usart.h
liboctopus/sample/: blink-sample.cpp  gpio-sample.cpp  squeleton-sample.cpp  temperature-sample.cpp  usart-sample.cpp
liboctopus/src/: analog_channel.cpp  analog_to_digital_converter.cpp  async_operation.cpp  avr_adc.cpp  avr_looper.cpp  avr_timer.cpp  avr_timer0.cpp  avr_two_wire_interface.cpp  avr_usart.cpp  blink.cpp  fatal.cpp  gpio.cpp  i2c.cpp  power_management.cpp  power_manager.cpp  servo.cpp  timer.cpp
liboctopus/src/octopus/dev/adc/: analog_channel.cpp  analog_channel.h  analog_to_digital_converter.cpp  analog_to_digital_converter.h  avr_adc_documentation.h
liboctopus/src/octopus/dev/blink/: blink.cpp  blink.h
liboctopus/src/octopus/dev/compass/: compass_listener.h  hmc6352.cpp  hmc6352.h
liboctopus/src/octopus/dev/i2c/: avr_two_wire_interface.cpp  avr_two_wire_interface.h  i2c_device.h  i2c_driver.h
liboctopus/src/octopus/dev/imu/: acceleration_listener.h  adxl345.cpp  adxl345.h  adxl345_register.h  imu3000.cpp  imu3000.h  inertial_data_listener.h  inertial_data_provider.h
liboctopus/src/octopus/dev/princeton_rf/: princeton_rf.h  princeton_rf_decoder.cpp  princeton_rf_decoder.h  princeton_rf_encoder.cpp  princeton_rf_encoder.h  rf_remote.cpp  rf_remote.h
liboctopus/src/octopus/dev/pwm/: avr_timer0.cpp  avr_timer0.h  pwm_channel.h
liboctopus/src/octopus/dev/range/: range_listener.h  range_provider.h
liboctopus/src/octopus/dev/servo/: servo.cpp  servo.h
liboctopus/src/octopus/dev/stepper/: stepper.cpp  stepper.h  stepper_4b.cpp  stepper_4b.h  stepper_4c.cpp  stepper_4c.h  stepper_4d.cpp  stepper_4d.h  stepper_listener.h
liboctopus/src/octopus/dev/thermo/: avr_temperature.h
liboctopus/src/octopus/dev/timer/: application_timer.cpp  application_timer.h  system_timer.cpp  system_timer.h
liboctopus/src/octopus/dev/usart/: avr_usart.cpp  avr_usart.h  boost_serial_port.cpp  boost_serial_port.h  linux_serial_port.cpp  linux_serial_port.h  pipe_reception_thread.cpp  pipe_reception_thread.h  pipe_transmission_thread.cpp  pipe_transmission_thread.h  usart.cpp  usart.h  usart_buffer.cpp  usart_buffer.h  usart_listener.h  windows_serial_port.cpp  windows_serial_port.h
liboctopus/src/octopus/event/: avr_looper.cpp  event.cpp  event.h  looper.h  wx_looper.cpp
liboctopus/src/octopus/prop/: local_property.cpp  local_property.h  octopus_comm_stack.h  packet.cpp  packet.h  packet_listener.h  property.cpp  property.h  property_address.cpp  property_data.h  property_listener.h  remote_property.cpp  remote_property.h
liboctopus/src/octopus/util/: avr_flash.cpp  avr_flash.h  avr_lock.cpp  fatal.cpp  fatal.h  list.h  lock.h  prop.h
libstepper/: CMakeLists.txt
libstepper/include/octopus/: avr_stepper.h  stepper.h
libstepper/sample/: stepper-sample.cpp
libstepper/src/: avr_stepper.cpp  stepper.cpp
libstepper/step_table/: step_table.c
submodules/wxsvg/src/agg/: .cvsignore  Makefile.am  Makefile.in  SVGCanvasAgg.cpp  SVGCanvasAgg.h  SVGCanvasPathAgg.cpp  SVGCanvasPathAgg.h  SVGCanvasTextAgg.cpp  SVGCanvasTextAgg.h
(+444 files in other folders)
